# for_helix_debugging

./: Cargo.toml  configuration.yaml
migrations/: 20230224161004_create_subscriptions_table.sql  20230306163558_add_status_to_subscriptions.sql.sql  20230306164021_make_status_not_null_in_subscriptions.sql  20230306164328_create_subscriptions_tokens_table.sql
scripts/: db_init.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
